# kenbot

./: .gitignore  README.md  auth_github.py  copilot-instructions.md  start-all.ps1
backend/: .env.example  diag_jwt.py  manage.py  patch_maps.py  pyproject.toml  requirements.txt  start.ps1  test_chat.py  ws_auth_test.py
backend/admin_portal/: apps.py  urls.py  views.py
backend/admin_portal/templates/admin_portal/: dashboard.html
backend/kenbot/: __init__.py  asgi.py  celery.py  github_auth.py  logging_filters.py  urls.py  ws_auth.py  wsgi.py
backend/kenbot/settings/: base.py  development.py  production.py
backend/maps/: apps.py  models.py  repository.py  schemas.py  serializers.py  urls.py  views.py
backend/maps/migrations/: 0001_initial.py
backend/pilot/: _session_context.py  agent.py  apps.py  consumers.py  models.py  planner.py  serializers.py  state.py  tools.py  urls.py  views.py
backend/pilot/migrations/: 0001_initial.py  0002_alter_pilotsession_user.py  0003_pilotsession_chat_history.py  0004_pilotsession_plan.py
backend/surveyor/: agent.py  apps.py  models.py  serializers.py  tasks.py  tools.py  urls.py  views.py
backend/surveyor/migrations/: 0001_initial.py
backend/vault/: apps.py  encryption.py  models.py  serializers.py  urls.py  views.py
backend/vault/migrations/: 0001_initial.py  0002_alter_encryptedvaultentry_unique_together_and_more.py
docs/: api.md  architecture.md  extension.md  maps.md  models.md  setup.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
extension/ui/: overlay.css  overlay.js
